--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,13 @@
 	"prefer-stable"     : true,
 	"minimum-stability" : "dev",
 	"config"            : {
-		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true
+		"allow-plugins" : {
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"composer/package-versions-deprecated": true
 		}
 	},
 	"require-dev"       : {
+		"clevercanyon/wpgroove-framework"     : "dev-main",
 		"clevercanyon/wpgroove-framework-dev" : "dev-main"
 	},
 	"autoload-dev"      : {
@@ -16,7 +18,7 @@
 	},
 	"scripts"           : {
 		"post-update-cmd"   : [
-			"[ $COMPOSER_DEV_MODE -eq 0 ] || ./vendor/clevercanyon/wpgroove-framework-dev/src/toolchain/composer/post-update-cmd.php"
+			"[ $COMPOSER_DEV_MODE -eq 0 ] || ./vendor/clevercanyon/wpgroove-framework/dev/toolchain/composer/post-update-cmd.php"
 		],
 		"run-project-tests" : [
 			"./vendor/bin/phpunit --configuration ./.phpunit.xml --testsuite tests"
@@ -24,7 +26,7 @@
 	},
 	"extra"             : {
 		"clevercanyon" : {
-			"$extends-packages" : [ "clevercanyon/wpgroove-framework-dev" ]
+			"$extends-packages" : [ "clevercanyon/wpgroove-framework" ]
 		}
 	}
 }
