--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 		"clevercanyon/wpgroove-framework-dev" : "dev-main"
 	},
 	"autoload-dev"      : {
-		"files"                              : [ "./.trunk.php" ],
-		"WP_Groove\\Skeleton_Theme__Tests\\" : "./tests/classes"
+		"WP_Groove\\Skeleton_Theme\\Tests\\" : [ "./tests/classes" ],
+		"files"                              : [ "./trunk/theme.php" ]
 	},
 	"scripts"           : {
 		"post-update-cmd"  : "[ $COMPOSER_DEV_MODE -eq 0 ] || ./vendor/clevercanyon/wpgroove-framework/dev/cli-tools/composer/on-post-update-cmd",
@@ -26,19 +26,14 @@
 		"clevercanyon" : {
 			"$extends-packages" : [ "clevercanyon/wpgroove-framework" ],
 			"&"                 : {
-				"project"    : {
+				"project" : {
 					"data" : {
-						"version"    : "1.0.0",
-						"stable_tag" : "1.0.0",
-						"layout"     : "wp-theme",
-						"name"       : "Skeleton Theme"
-					}
-				},
-				"php_scoper" : {
-					"cfg" : {
-						"exclude-constants" : [ ],
-						"exclude-classes"   : [ ],
-						"exclude-functions" : [ ]
+						"version"        : "1.0.0",
+						"stable_tag"     : "1.0.0",
+
+						"layout"         : "wp-theme",
+						"namespace_crux" : "WP_Groove\\Skeleton_Theme",
+						"name"           : "Skeleton Theme"
 					}
 				}
 			}
