--- a/trunk/composer.json
+++ b/trunk/composer.json
@@ -4,7 +4,7 @@
 	"minimum-stability" : "dev",
 	"config"            : {
 		"platform"           : {
-			"php-64bit" : "7.4.0"
+			"php" : "7.4.0"
 		},
 		"prepend-autoloader" : false
 	},
