--- a/.gitignore
+++ b/.gitignore
@@ -155,4 +155,9 @@ Icon?
 # Specifics
 
 /dev/.libs/docker/wp/.env
-/dev/.libs/docker/wp/compose-sym.yml
+/dev/.libs/docker/wp/.compose~sym.yml
+
+# For projects with a `wp-website|wp-network` layout, we want these.
+
+!/wp-includes/**/vendor/
+!/wp-content/**/vendor/
