--- a/.shellcheckrc
+++ b/.shellcheckrc
@@ -13,3 +13,4 @@
 
 disable=SC2016 # We use a lot of backticks.
 disable=SC1003 # Don't offer this single-quote escape tip.
+disable=SC2155 # Assignment with nested calls is OK.
