--- a/dev/.libs/docker/wp/compose~ci.yml
+++ b/dev/.libs/docker/wp/compose~ci.yml
@@ -1,5 +1,19 @@
 ##
+# Clever Canyon™ {@see https://clevercanyon.com}
+#
+#  CCCCC  LL      EEEEEEE VV     VV EEEEEEE RRRRRR      CCCCC    AAA   NN   NN YY   YY  OOOOO  NN   NN ™
+# CC      LL      EE      VV     VV EE      RR   RR    CC       AAAAA  NNN  NN YY   YY OO   OO NNN  NN
+# CC      LL      EEEEE    VV   VV  EEEEE   RRRRRR     CC      AA   AA NN N NN  YYYYY  OO   OO NN N NN
+# CC      LL      EE        VV VV   EE      RR  RR     CC      AAAAAAA NN  NNN   YYY   OO   OO NN  NNN
+#  CCCCC  LLLLLLL EEEEEEE    VVV    EEEEEEE RR   RR     CCCCC  AA   AA NN   NN   YYY    OOOO0  NN   NN
+##
+
+##
 # WP docker compose file (CI variant).
+#
+# This opens ports system-wide on a CI to simplify access.
+# This way, on a CI we won't need to depend on each container's IP address.
+# Rather, the whole service composition can be accessed via `127.0.0.1`.
 #
 # @since 1.0.0
 #
