--- a/dev/.libs/docker/wp/config/php.ini
+++ b/dev/.libs/docker/wp/config/php.ini
@@ -1,3 +1,13 @@
+;;;
+; Clever Canyon™ {@see https://clevercanyon.com}
+;
+;  CCCCC  LL      EEEEEEE VV     VV EEEEEEE RRRRRR      CCCCC    AAA   NN   NN YY   YY  OOOOO  NN   NN ™
+; CC      LL      EE      VV     VV EE      RR   RR    CC       AAAAA  NNN  NN YY   YY OO   OO NNN  NN
+; CC      LL      EEEEE    VV   VV  EEEEE   RRRRRR     CC      AA   AA NN N NN  YYYYY  OO   OO NN N NN
+; CC      LL      EE        VV VV   EE      RR  RR     CC      AAAAAAA NN  NNN   YYY   OO   OO NN  NNN
+;  CCCCC  LLLLLLL EEEEEEE    VVV    EEEEEEE RR   RR     CCCCC  AA   AA NN   NN   YYY    OOOO0  NN   NN
+;;;
+
 ;;
 ; PHP.ini config file.
 ;
@@ -13,4 +23,102 @@
 ; - Instead of editing this file, please review source repository {@see https://o5p.me/LevQOD}.
 ;;
 
-phar.readonly = no
+; PHP headers.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.language-options}.
+expose_php = no
+
+; Default timezone.
+; {@see https://www.php.net/manual/en/datetime.configuration.php#datetime.configuration}.
+date.timezone = utc
+
+; Default charset.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.data-handling}.
+default_charset = utf-8
+
+; Error handling.
+; {@see https://www.php.net/manual/en/errorfunc.configuration.php}.
+error_log = /tmp/php-errors.log
+error_reporting = E_ALL & ~E_STRICT & ~E_NOTICE & ~E_USER_NOTICE & ~E_DEPRECATED & ~E_USER_DEPRECATED
+display_startup_errors = no
+display_errors = no
+html_errors = no
+log_errors = yes
+
+; Assertions.
+; {@see https://www.php.net/manual/en/function.assert.php#function.assert.expectations}.
+zend.assertions = 0
+assert.exception = 1
+
+; Max input size.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.data-handling}.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.file-uploads}.
+post_max_size = 128M
+upload_max_filesize = 64M
+max_file_uploads = 20
+
+; Max execution time.
+; {@see https://www.php.net/manual/en/info.configuration.php#info.configuration}.
+max_input_time = -1
+max_execution_time = 120
+
+; Memory limits.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.resource-limits}.
+memory_limit = 256M
+
+; Realpath.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.performance}.
+realpath_cache_size = 64K
+realpath_cache_ttl = 1800
+
+; OPcache.
+; `5242880` = 5MB.
+; {@see https://o5p.me/KP8Ain}.
+; {@see https://www.php.net/manual/en/opcache.configuration.php}.
+opcache.enable = yes
+opcache.enable_cli = no
+opcache.memory_consumption = 128
+opcache.max_wasted_percentage = 5
+opcache.interned_strings_buffer = 16
+opcache.max_accelerated_files = 32531
+opcache.max_file_size = 5242880
+opcache.revalidate_freq = 60
+
+; Memcached config.
+; {@see https://www.php.net/manual/en/memcached.configuration.php}.
+memcached.serializer = igbinary
+memcached.compression_type = fastlz
+
+; Output buffering.
+; {@see https://www.php.net/manual/en/outcontrol.configuration.php}.
+output_buffering = 8096
+
+; Sessions.
+; {@see https://www.php.net/manual/en/session.configuration.php}.
+session.gc_probability = 1
+session.gc_divisor = 500
+session.gc_maxlifetime = 86400
+session.serialize_handler = igbinary
+
+; PHAR configuration.
+; {@see https://www.php.net/manual/en/phar.configuration.php}.
+phar.readonly = yes
+
+; Auto-prepend PHP file.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.data-handling}.
+auto_prepend_file =
+
+; Disable none.
+; {@see https://www.php.net/manual/en/ini.core.php#ini.sect.language-options}.
+disable_classes =
+disable_functions =
+
+; XDebug config.
+; {@see https://xdebug.org/docs/all_settings}.
+xdebug.mode = off
+xdebug.client_port = 9003
+xdebug.scream = no
+xdebug.cli_color = yes
+xdebug.show_local_vars = yes
+xdebug.var_display_max_depth = 10
+xdebug.var_display_max_children = 512
+xdebug.var_display_max_data = 256
