--- a/dev/.libs/docker/wp/config/php~prj.ini
+++ b/dev/.libs/docker/wp/config/php~prj.ini
@@ -1,3 +1,13 @@
+;;;
+; Clever Canyon™ {@see https://clevercanyon.com}
+;
+;  CCCCC  LL      EEEEEEE VV     VV EEEEEEE RRRRRR      CCCCC    AAA   NN   NN YY   YY  OOOOO  NN   NN ™
+; CC      LL      EE      VV     VV EE      RR   RR    CC       AAAAA  NNN  NN YY   YY OO   OO NNN  NN
+; CC      LL      EEEEE    VV   VV  EEEEE   RRRRRR     CC      AA   AA NN N NN  YYYYY  OO   OO NN N NN
+; CC      LL      EE        VV VV   EE      RR  RR     CC      AAAAAAA NN  NNN   YYY   OO   OO NN  NNN
+;  CCCCC  LLLLLLL EEEEEEE    VVV    EEEEEEE RR   RR     CCCCC  AA   AA NN   NN   YYY    OOOO0  NN   NN
+;;;
+
 ;;
 ; PHP.ini config file.
 ;
