--- a/.npmignore
+++ b/.npmignore
@@ -156,7 +156,7 @@ Icon?
 # Specifics
 
 /dev/.libs/docker/wp/.env
-/dev/.libs/docker/wp/compose-sym.yml
+/dev/.libs/docker/wp/.compose~sym.yml
 
 # For WordPress sites we want these.
 
