--- a/dev/.libs/docker/wp/config/php.ini
+++ b/dev/.libs/docker/wp/config/php.ini
@@ -81,7 +81,8 @@ opcache.max_wasted_percentage = 5
 opcache.interned_strings_buffer = 16
 opcache.max_accelerated_files = 32531
 opcache.max_file_size = 5242880
-opcache.revalidate_freq = 60
+opcache.validate_timestamps = yes
+opcache.revalidate_freq = 0
 
 ; Memcached config.
 ; {@see https://www.php.net/manual/en/memcached.configuration.php}.
